Revamped broomstick controls