@@ -17,7 +17,6 @@ import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.level.GameRules;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.state.BlockState;
-import net.minecraft.world.phys.Vec2;
 import net.minecraft.world.phys.Vec3;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -26,14 +25,21 @@ import java.util.List;
 
 public class Broomstick extends Entity {
 
+    private static final EntityDataAccessor<Integer> DATA_ID_HURT = SynchedEntityData.defineId(Broomstick.class, EntityDataSerializers.INT);
+    private static final EntityDataAccessor<Integer> DATA_ID_HURTDIR = SynchedEntityData.defineId(Broomstick.class, EntityDataSerializers.INT);
+    private static final EntityDataAccessor<Float> DATA_ID_DAMAGE = SynchedEntityData.defineId(Broomstick.class, EntityDataSerializers.FLOAT);
+
     public static final double ACCELERATION = 0.02D;
     public static final double MAX_SPEED = 1.0D;
+    public static final double MAX_TILT = 20.0D;
+
+    public int inputAcceleration = 0;
+    public int inputClimb = 0;
+
+    public int inputTurn = 0;
 
     private float deltaRotX = 0.0F;
     private float deltaRotY = 0.0F;
-
-    private int inputAcceleration = 0;
-    private int inputClimb = 0;
 
     private int lerpSteps = 0;
     private double lerpX = 0.0D;
@@ -41,10 +47,6 @@ public class Broomstick extends Entity {
     private double lerpZ = 0.0D;
     private double lerpXRot = 0.0D;
     private double lerpYRot = 0.0D;
-
-    private static final EntityDataAccessor<Integer> DATA_ID_HURT = SynchedEntityData.defineId(Broomstick.class, EntityDataSerializers.INT);
-    private static final EntityDataAccessor<Integer> DATA_ID_HURTDIR = SynchedEntityData.defineId(Broomstick.class, EntityDataSerializers.INT);
-    private static final EntityDataAccessor<Float> DATA_ID_DAMAGE = SynchedEntityData.defineId(Broomstick.class, EntityDataSerializers.FLOAT);
 
     public Broomstick(EntityType<Broomstick> type, Level world) {
         super(type, world);
@@ -62,7 +64,6 @@ public class Broomstick extends Entity {
     public void tick() {
         if(getHurtTime() > 0)
             setHurtTime(getHurtTime() - 1);
-
         if(getDamage() > 0.0F)
             setDamage(getDamage() - 1.0F);
 
@@ -70,21 +71,75 @@ public class Broomstick extends Entity {
 
         tickLerp();
         if(isControlledByLocalInstance()) {
-            //setPacketCoordinates(getX(), getY(), getZ());
-
             if(level().isClientSide) {
-                deltaRotX *= 0.8F;
-                deltaRotY *= 0.8F;
                 BroomstickEntityClientHandler.controlBroom(this);
+                handleRotationTick();
+                handleMovementTick();
             }
             else {
-                setDeltaMovement(getDeltaMovement().scale(0.75D).add(0.0D, -0.05D, 0.0D));
+                setDeltaMovement(getDeltaMovement().scale(0.75D));
+
+                if(level().getEntitiesOfClass(Player.class, getBoundingBox().inflate(0, 1.0D, 0)).isEmpty())
+                    setDeltaMovement(getDeltaMovement().add(0.0D, -0.01D, 0.0D));
             }
             move(MoverType.SELF, getDeltaMovement());
         }
         else {
             setDeltaMovement(Vec3.ZERO);
         }
+    }
+
+    protected void handleMovementTick() {
+        Vec3 velocity = getDeltaMovement();
+
+        Vec3 forward = Vec3.directionFromRotation(0, getYRot());
+        Vec3 up = new Vec3(0.0D, 1.0D, 0.0D);
+        Vec3 left = up.cross(forward);
+
+        double acceleration = inputAcceleration * ACCELERATION;
+
+        // If W or S is held, only decelerate the sideways components of the velocity.
+        velocity = forward.scale(velocity.dot(forward) * (inputAcceleration == 0 ? 0.85D : 1.0D) + acceleration)
+                .add(up.scale(velocity.dot(up) * 0.85D))
+                .add(left.scale(velocity.dot(left) * 0.85D));
+
+        velocity = velocity.add(0, inputClimb * ACCELERATION * 1.25D, 0); // Include vertical movement
+
+        double speed = Math.max(Math.min(velocity.length(), MAX_SPEED), 0); // Clamp to maximum velocity.
+        setDeltaMovement(velocity.normalize().scale(speed));
+    }
+
+    protected void handleRotationTick() {
+        LivingEntity controller = getControllingPassenger();
+
+        deltaRotY += inputTurn;
+        deltaRotX += inputClimb * -inputAcceleration;
+
+        if(inputClimb == 0 || inputAcceleration == 0) {
+            if(Math.abs(getXRot()) < Math.abs(deltaRotX))
+                deltaRotX = -getXRot();
+            else if(getXRot() > 0) {
+                if(deltaRotX > 0)
+                    deltaRotX = 0;
+                deltaRotX--;
+            }
+            else if(getXRot() < 0) {
+                if(deltaRotX < 0)
+                    deltaRotX = 0;
+                deltaRotX++;
+            }
+        }
+
+        setYRot(getYRot() + deltaRotY);
+        controller.setYRot(controller.getYRot() + deltaRotY);
+        setXRot((float)Mth.clamp(getXRot() + deltaRotX, -MAX_TILT, MAX_TILT));
+        deltaRotX *= 0.8F;
+        deltaRotY *= 0.8F;
+    }
+
+    @Override
+    public Vec3 getDismountLocationForPassenger(LivingEntity passenger) {
+        return new Vec3(getX(), getBoundingBox().maxY + 0.05D, getZ());
     }
 
     @Override
@@ -98,26 +153,15 @@ public class Broomstick extends Entity {
     @Override
     protected void playStepSound(BlockPos pos, BlockState state) {}
 
-    private void tickLerp() {
+    protected void tickLerp() {
         if(isControlledByLocalInstance()) {
             lerpSteps = 0;
-            //setPacketCoordinates(getX(), getY(), getZ());
+            syncPacketPositionCodec(getX(), getY(), getZ());
         }
 
         if(lerpSteps > 0) {
-            double x = getX() + (lerpX - getX()) / lerpSteps;
-            double y = getY() + (lerpY - getY()) / lerpSteps;
-            double z = getZ() + (lerpZ - getZ()) / lerpSteps;
-
-            double xRot = Mth.wrapDegrees(lerpXRot - getXRot());
-            double yRot = Mth.wrapDegrees(lerpYRot - getYRot());
-
-            setXRot((float)(getXRot() + xRot / lerpSteps));
-            setYRot((float)(getYRot() + yRot / lerpSteps));;
-
-            --lerpSteps;
-            setPos(x, y, z);
-            setRot(getYRot(), getXRot());
+            lerpPositionAndRotationStep(lerpSteps, lerpX, lerpY, lerpZ, lerpYRot, lerpXRot);
+            lerpSteps--;
         }
     }
 
@@ -129,23 +173,6 @@ public class Broomstick extends Entity {
         lerpYRot = yaw;
         lerpXRot = pitch;
         lerpSteps = steps;
-    }
-
-    public Vec3 getNewDeltaMovement() {
-        Vec3 velocity = getDeltaMovement();
-
-        Vec3 forward = Vec3.directionFromRotation(new Vec2(getXRot(), getYRot()));
-        Vec3 up = Vec3.directionFromRotation(new Vec2(getXRot()-90, getYRot()));
-        Vec3 left = up.cross(forward);
-
-        double acceleration = inputAcceleration * ACCELERATION;
-        velocity = forward.scale(velocity.dot(forward) * (inputAcceleration == 0 ? 0.85D : 1.0D) + acceleration)
-                .add(up.scale(velocity.dot(up) * 0.85D))
-                .add(left.scale(velocity.dot(left) * 0.85D));
-        velocity = velocity.add(0, inputClimb * ACCELERATION*1.25D, 0);
-
-        double speed = Math.max(Math.min(velocity.length(), MAX_SPEED), 0);
-        return velocity.normalize().scale(speed);
     }
 
     @Override
@@ -169,12 +196,10 @@ public class Broomstick extends Entity {
             return InteractionResult.SUCCESS;
         }
         else {
-            if(!level().isClientSide) {
+            if(!level().isClientSide)
                 return player.startRiding(this) ? InteractionResult.CONSUME : InteractionResult.PASS;
-            }
-            else {
+            else
                 return InteractionResult.SUCCESS;
-            }
         }
     }
 
@@ -185,12 +210,10 @@ public class Broomstick extends Entity {
 
     @Override
     protected void readAdditionalSaveData(@NotNull CompoundTag nbt) {
-
     }
 
     @Override
     protected void addAdditionalSaveData(@NotNull CompoundTag nbt) {
-
     }
 
     @Override
@@ -206,12 +229,10 @@ public class Broomstick extends Entity {
 
     public boolean isControlledByLocalInstance() {
         Entity entity = getControllingPassenger();
-        if(entity instanceof Player) {
+        if(entity instanceof Player)
             return ((Player) entity).isLocalPlayer();
-        }
-        else {
-            return !level().isClientSide;
-        }
+
+        return !level().isClientSide;
     }
 
     @Nullable
@@ -220,7 +241,7 @@ public class Broomstick extends Entity {
         List<Entity> list = getPassengers();
         if(list.isEmpty())
             return null;
-        return list.get(0) instanceof LivingEntity le ? le : null;
+        return list.getFirst() instanceof LivingEntity le ? le : null;
     }
 
     @Override
@@ -245,14 +266,12 @@ public class Broomstick extends Entity {
     @Override
     public void push(@NotNull Entity entity) {
         if(entity instanceof Broomstick) {
-            if(entity.getBoundingBox().minY < getBoundingBox().maxY) {
+            if(entity.getBoundingBox().minY < getBoundingBox().maxY)
                 super.push(entity);
-            }
         }
         else if(entity.getBoundingBox().minY <= getBoundingBox().minY) {
             super.push(entity);
         }
-
     }
 
     @Override
@@ -267,9 +286,8 @@ public class Broomstick extends Entity {
             markHurt();
             boolean isSurvivalPlayer = source.getEntity() instanceof Player && ((Player) source.getEntity()).getAbilities().instabuild;
             if(isSurvivalPlayer || getDamage() > 40.0F) {
-                if(!isSurvivalPlayer && level().getGameRules().getBoolean(GameRules.RULE_DOENTITYDROPS)) {
+                if(!isSurvivalPlayer && level().getGameRules().getBoolean(GameRules.RULE_DOENTITYDROPS))
                     spawnAtLocation(EItems.ENCHANTED_BROOMSTICK.get());
-                }
 
                 discard();
             }
@@ -312,39 +330,24 @@ public class Broomstick extends Entity {
         setDamage(getDamage() * 11.0F);
     }
 
-    public void setInputAcceleration(boolean forwards, boolean backwards) {
-        if((!forwards && !backwards) || (forwards && backwards))
-            inputAcceleration = 0;
-        else if(forwards)
-                inputAcceleration = 1;
-        else
-            inputAcceleration = -1;
-    }
+    public void setInputs(boolean forward, boolean backward, boolean left, boolean right, boolean up, boolean down) {
+        inputAcceleration = 0;
+        if(forward)
+            inputAcceleration++;
+        if(backward)
+            inputAcceleration--;
 
-    public void setInputClimb(boolean up, boolean down) {
-        if((!up && !down) || (up && down))
-            inputClimb = 0;
-        else if(up)
-            inputClimb = 1;
-        else
-            inputClimb = -1;
-    }
+        inputTurn = 0;
+        if(left)
+            inputTurn--;
+        if(right)
+            inputTurn++;
 
-
-    public void setDeltaRotX(float value) {
-        deltaRotX = value;
-    }
-
-    public void setDeltaRotY(float value) {
-        deltaRotY = value;
-    }
-
-    public float getDeltaRotX() {
-        return deltaRotX;
-    }
-
-    public float getDeltaRotY() {
-        return deltaRotY;
+        inputClimb = 0;
+        if(up)
+            inputClimb++;
+        if(down)
+            inputClimb--;
     }
 
 }
